@@ -38,6 +38,11 @@
 <p>2018-12-18  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul>
+<li><p class="first">coders/gif.c (ReadGIFImage): Don't throw an error if opacity is
+outside of the range of the image colors.  Fix suggested by 莫红波
+&lt;<a class="reference external" href="mailto:hongbo&#46;mo&#37;&#52;&#48;upai&#46;com">hongbo<span>&#46;</span>mo<span>&#64;</span>upai<span>&#46;</span>com</a>&gt; on the graphicsmagick-bugs mailinb list on
+Fri, 9 Oct 2015.</p>
+</li>
 <li><p class="first">magick/memory.h (MagickAllocateClearedArray): New macro for
 allocating a cleared array.</p>
 </li>
